apps/joplin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-webdav
  labels:
    app.kubernetes.io/name: joplin-webdav
    app.kubernetes.io/part-of: joplin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: joplin-webdav
  template:
    metadata:
      labels:
        app.kubernetes.io/name: joplin-webdav
        app.kubernetes.io/part-of: joplin
    spec:
      nodeSelector:
        kubernetes.io/hostname: pj
      containers:
        - name: webdav
          image: bytemark/webdav:latest
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/dav/data
      volumes:
        - name: data
          nfs:
            server: 192.168.1.162
            path: /volume1/docker/joplin
