apps/joplin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin-webdav
  labels:
    app.kubernetes.io/part-of: joplin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: joplin.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joplin-webdav
                port:
                  number: 80
